--- a/manual_github.html
+++ b/manual_github.html
@@ -63,7 +63,7 @@
   <header class="fixed top-0 left-0 w-full bg-purple-900/70 backdrop-blur-md z-50 shadow-lg">
     <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-6">
       <h1 class="text-2xl md:text-3xl font-bold text-purple-300 drop-shadow-[0_0_10px_#9333ea]">
-        🌐 Manual GitHub
+         Manual GitHub
       </h1>
       <nav class="flex gap-4">
         <a href="index.html" class="hover:text-purple-400 font-semibold">Inicio</a>
@@ -80,7 +80,7 @@
     <!-- Hero / Introducción -->
     <section class="mb-20 text-center fade-in">
       <h2 class="text-4xl md:text-5xl font-bold text-purple-400 drop-shadow-[0_0_15px_#a855f7] mb-4">
-        🚀 GitHub: Tu puente al mundo colaborativo
+         GitHub: Tu puente al mundo colaborativo
       </h2>
       <!-- Texto dinámico -->
       <div id="typing-container" class="mb-6 text-xl"></div>
@@ -106,22 +106,22 @@
 
     <!-- Sección: Características -->
     <section class="mb-20 fade-in">
-      <h3 class="text-3xl font-bold text-purple-300 mb-6">✨ ¿Qué hace especial a GitHub?</h3>
+      <h3 class="text-3xl font-bold text-purple-300 mb-6"> ¿Qué hace especial a GitHub?</h3>
       <div class="grid md:grid-cols-2 gap-6">
         <div class="bg-purple-900/40 p-6 rounded-xl shadow-lg">
-          <h4 class="text-xl font-bold text-purple-400 mb-2">🌍 Repositorios remotos</h4>
+          <h4 class="text-xl font-bold text-purple-400 mb-2"> Repositorios remotos</h4>
           <p class="text-gray-300">Accede a tu código desde cualquier lugar y compártelo con el mundo.</p>
         </div>
         <div class="bg-purple-900/40 p-6 rounded-xl shadow-lg">
-          <h4 class="text-xl font-bold text-purple-400 mb-2">🤝 Colaboración</h4>
+          <h4 class="text-xl font-bold text-purple-400 mb-2"> Colaboración</h4>
           <p class="text-gray-300">Usa <span class="italic">pull requests</span> y revisiones de código para trabajar en equipo.</p>
         </div>
         <div class="bg-purple-900/40 p-6 rounded-xl shadow-lg">
-          <h4 class="text-xl font-bold text-purple-400 mb-2">📊 Gestión de proyectos</h4>
+          <h4 class="text-xl font-bold text-purple-400 mb-2"> Gestión de proyectos</h4>
           <p class="text-gray-300">Organiza tareas con tableros tipo Kanban gracias a GitHub Projects.</p>
         </div>
         <div class="bg-purple-900/40 p-6 rounded-xl shadow-lg">
-          <h4 class="text-xl font-bold text-purple-400 mb-2">🌐 Portafolio personal</h4>
+          <h4 class="text-xl font-bold text-purple-400 mb-2"> Portafolio personal</h4>
           <p class="text-gray-300">Muestra tus proyectos con GitHub Pages y crea tu huella digital.</p>
         </div>
       </div>
@@ -129,7 +129,7 @@
 
     <!-- Crear cuenta -->
     <section class="mb-20 fade-in">
-      <h3 class="text-3xl font-bold text-purple-300 mb-6">📝 Crear tu cuenta en GitHub</h3>
+      <h3 class="text-3xl font-bold text-purple-300 mb-6"> Crear tu cuenta en GitHub</h3>
       <ol class="list-decimal pl-6 space-y-4 text-gray-300 text-lg">
         <li>Ingresa a: <a href="https://github.com" target="_blank" class="text-purple-400 underline">https://github.com</a></li>
         <li>Haz clic en <span class="font-bold">Sign Up</span>.</li>
@@ -138,7 +138,7 @@
         <li>Configura tu perfil: foto, biografía y tecnologías favoritas.</li>
       </ol>
       <div class="mt-6 p-4 bg-purple-900/40 rounded-xl border border-purple-700 text-center">
-        ✅ ¡Ya tienes tu cuenta lista para comenzar!
+         ¡Ya tienes tu cuenta lista para comenzar!
       </div>
     </section>
 
@@ -146,8 +146,8 @@
     <section class="mb-20 fade-in">
       <h3 class="text-3xl font-bold text-purple-300 mb-6">⚡ Tus primeros pasos en GitHub</h3>
       <div class="space-y-4 text-gray-300">
-        <p>1️⃣ Crea un nuevo repositorio desde <span class="font-bold">New Repository</span>.</p>
-        <p>2️⃣ Conéctalo desde tu terminal con:</p>
+        <p>1 Crea un nuevo repositorio desde <span class="font-bold">New Repository</span>.</p>
+        <p>2 Conéctalo desde tu terminal con:</p>
         <pre class="bg-black/50 p-4 rounded-lg text-purple-300 overflow-x-auto"><code>
 git init
 git remote add origin https://github.com/tu-usuario/tu-repo.git
@@ -155,13 +155,13 @@ git add .
 git commit -m "Mi primer commit"
 git push -u origin main
         </code></pre>
-        <p>3️⃣ ¡Listo! Tu proyecto ya vive en la nube y cualquiera puede verlo.</p>
+        <p>3 ¡Listo! Tu proyecto ya vive en la nube y cualquiera puede verlo.</p>
       </div>
     </section>
 
     <!-- Recursos -->
     <section class="mb-20 fade-in">
-      <h3 class="text-3xl font-bold text-purple-300 mb-6">📚 Recursos oficiales y ayuda</h3>
+      <h3 class="text-3xl font-bold text-purple-300 mb-6"> Recursos oficiales y ayuda</h3>
       <ul class="space-y-3 text-gray-300 text-lg">
         <li><a href="https://docs.github.com/es" target="_blank" class="text-purple-400 underline">📖 Documentación oficial de GitHub</a></li>
         <li><a href="https://education.github.com/pack" target="_blank" class="text-purple-400 underline">🎓 GitHub Student Pack</a> (beneficios para estudiantes)</li>
@@ -171,7 +171,7 @@ git push -u origin main
 
     <!-- Motivación -->
     <section class="text-center mb-20 fade-in">
-      <h3 class="text-3xl font-bold text-purple-400 mb-4">🌟 Tú también puedes</h3>
+      <h3 class="text-3xl font-bold text-purple-400 mb-4"> Tú también puedes</h3>
       <p class="text-lg text-gray-300 max-w-3xl mx-auto">
         Cada línea de código que subes a <span class="text-purple-400">GitHub</span> es un paso hacia tu futuro.  
         No importa si empiezas con proyectos pequeños: lo importante es comenzar.  
@@ -183,7 +183,7 @@ git push -u origin main
     <div class="mt-10 flex justify-center">
       <a href="https://github.com/Wikkl20" target="_blank"
         class="px-6 py-3 bg-purple-700 rounded-xl font-bold hover:bg-purple-400 hover:text-black transition transform hover:scale-105">
-        🚀 Ver repositorio
+         Ver repositorio
       </a>
     </div>
 
@@ -216,8 +216,8 @@ git push -u origin main
         x: Math.random() * canvas.width,
         y: Math.random() * canvas.height,
         radius: 2 + Math.random() * 3,
-        dx: (Math.random() - 0.5) * 1.5,
-        dy: (Math.random() - 0.5) * 1.5
+        dx: (Math.random() - 1.5) * 1.5,
+        dy: (Math.random() - 1.5) * 1.5
       });
     }
 
