--- a/semana4.html
+++ b/semana4.html
@@ -3,49 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Semana 3 - Desarrollo de Aplicaciones</title>
+  <title>Semana 4 - Desarrollo de Aplicaciones</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-b from-black via-purple-950 to-black text-white flex flex-col min-h-screen relative">
 
-  <!-- Fondo decorativo -->
+  <!-- Fondo -->
   <div class="absolute inset-0 bg-[url('https://wallpapercave.com/wp/wp6204383.jpg')] bg-cover bg-center opacity-20"></div>
 
-  <!-- Encabezado con menú superior -->
-<header class="w-full bg-purple-800/90 shadow-lg z-20 sticky top-0">
+  <!-- Encabezado -->
+  <header class="w-full bg-purple-800/90 shadow-lg z-20 sticky top-0">
     <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
-      <!-- Logo -->
       <div class="flex items-center gap-4">
         <img src="logo_uni.png" alt="Logo Universidad" class="w-14 h-14 object-contain">
         <h1 class="text-2xl md:text-3xl font-bold drop-shadow-[0_0_15px_#a855f7]">
-          Desarrollo de Aplicaciones - Semana 3
+          Desarrollo de Aplicaciones - Semana 4
         </h1>
       </div>
-  
-      <!-- Menú -->
       <nav class="hidden md:flex gap-6 text-lg font-semibold">
         <a href="index.html" class="hover:text-purple-300 transition">Inicio</a>
         <a href="manual_git.html" class="hover:text-purple-300 transition">Manual Git</a>
         <a href="manual_github.html" class="hover:text-purple-300 transition">Manual GitHub</a>
         <a href="semana1.html" class="hover:text-purple-300 transition">Proyectos</a>
       </nav>
-  
     </div>
   </header>
-  
 
-  <!-- Contenido principal con sidebar -->
+  <!-- Contenido -->
   <main class="flex flex-1 mt-8 z-10 px-6 gap-6 items-start max-w-6xl mx-auto w-full">
 
-    <!-- Barra lateral -->
+    <!-- Sidebar -->
     <aside class="w-56 min-w-[14rem] bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-4 border border-purple-700 flex flex-col gap-3 sticky top-24 h-auto max-h-[72vh] overflow-y-auto">
       <h2 class="text-lg font-bold text-purple-300 mb-2 text-center">Semanas</h2>
       <div class="flex flex-col gap-2">
-        <!-- Lista completa de semanas -->
         <a href="semana1.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 1</a>
         <a href="semana2.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 2</a>
-        <a href="semana3.html" class="px-3 py-2 bg-purple-400 text-black font-bold rounded-lg shadow-lg transition">Semana 3</a>
-        <a href="semana4.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 4</a>
+        <a href="semana3.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 3</a>
+        <a href="semana4.html" class="px-3 py-2 bg-purple-400 text-black font-bold rounded-lg shadow-lg transition">Semana 4</a>
         <a href="semana5.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 5</a>
         <a href="semana6.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 6</a>
         <a href="semana7.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 7</a>
@@ -66,80 +60,77 @@
 
       <!-- Introducción -->
       <div class="bg-purple-900/40 rounded-2xl shadow-xl p-8 border border-purple-700">
-        <h2 class="text-2xl md:text-3xl font-bold text-purple-300 mb-4 text-center"> Introducción a la Semana 3</h2>
+        <h2 class="text-2xl md:text-3xl font-bold text-purple-300 mb-4 text-center"> Introducción a la Semana 4</h2>
         <p class="text-lg leading-relaxed text-justify">
-          En la tercera semana nos adentramos en la <b>Programación Orientada a Objetos (POO)</b> con 
-          <b>Java y Apache NetBeans (Maven)</b>. 
-          Los proyectos de esta semana fortalecen el uso de clases, atributos y métodos, aplicando
-          principios de <b>encapsulamiento</b> y <b>modularidad</b>.
-        </p>
-        <p class="text-lg leading-relaxed text-justify mt-4">
-          Se desarrollaron dos ejercicios prácticos: una <i>tienda de productos</i> y una <i>empresa de transportes</i>, 
-          ambos con lógica de negocio orientada a objetos, diagramas UML y validaciones de entrada de datos.
+          En esta semana trabajamos con <b>Java y Apache NetBeans</b> usando arquitectura 
+          <b>MVC</b>. Los proyectos se enfocan en cálculos geométricos y validación de usuarios 
+          con niveles de acceso, además de interfaces gráficas.
         </p>
       </div>
 
       <!-- Actividad 01 -->
       <div class="bg-purple-900/40 rounded-2xl shadow-xl p-8 border border-purple-700">
-        <h2 class="text-xl font-bold text-purple-300 mb-4"> Actividad 01: Tienda de productos</h2>
+        <h2 class="text-xl font-bold text-purple-300 mb-4">Actividad 01: Figuras geométricas</h2>
         <p class="text-justify mb-4">
-          Se modela una <b>tienda</b> que vende productos por docenas. El descuento depende de la cantidad:
-          <b>20% si son 10 o más docenas</b>, de lo contrario <b>10%</b>. 
-          Además, si el importe a pagar es ≥ S/.200, la tienda obsequia <b>2 lapiceros por cada docena</b>.
+          Se desarrolla una app que permita ingresar dimensiones de <b>cuadrado, rectángulo y triángulo</b>. 
+          La aplicación calcula el <b>área</b> y el <b>perímetro</b>, y dibuja la figura en pixeles. 
+          Todo bajo el patrón <b>MVC</b> con paquetes <code>modelo</code>, <code>vista</code> y <code>controlador</code>.
         </p>
-        <pre class="bg-black/50 p-4 rounded-lg text-purple-300 text-sm overflow-x-auto"><code>
-public class Producto {
-    private double precioDocena;
-    private int cantidad;
+        <pre class="bg-black/50 p-4 rounded-lg text-indigo-300 text-sm overflow-x-auto"><code>
+// Ejemplo de clase Modelo (Cuadrado)
+package modelo;
 
-    public Producto(double precioDocena, int cantidad) {
-        this.precioDocena = precioDocena;
-        this.cantidad = cantidad;
-    }
+public class Cuadrado {
+    private double lado;
 
-    public double calcularImporte() { return precioDocena * cantidad; }
-    public double calcularDescuento() { return calcularImporte() * (cantidad >= 10 ? 0.20 : 0.10); }
-    public double calcularPago() { return calcularImporte() - calcularDescuento(); }
-    public int calcularLapiceros() { return calcularPago() >= 200 ? 2 * cantidad : 0; }
+    public Cuadrado(double lado) { this.lado = lado; }
+    public double calcularArea() { return lado * lado; }
+    public double calcularPerimetro() { return 4 * lado; }
 }
         </code></pre>
-        <p class="text-sm text-gray-300 mt-2"> El diseño permite calcular de forma clara el importe, descuentos y obsequios.</p>
+        <p class="text-sm text-gray-300 mt-2">La vista solicita datos y muestra resultados, mientras el controlador gestiona la interacción.</p>
+      </div>
       </div>
 
       <!-- Actividad 02 -->
       <div class="bg-purple-900/40 rounded-2xl shadow-xl p-8 border border-purple-700">
-        <h2 class="text-xl font-bold text-purple-300 mb-4"> Actividad 02: Empresa de transportes</h2>
+        <h2 class="text-xl font-bold text-purple-300 mb-4">Actividad 02: Login y conversiones</h2>
         <p class="text-justify mb-4">
-          Una empresa de transportes vende pasajes con un <b>precio fijo de S/.37.5</b>. 
-          Si se compran <b>15 o más pasajes</b>, el descuento es del <b>8%</b>, de lo contrario del <b>5%</b>. 
-          Además, si el pago supera los S/.200, la empresa regala <b>2 caramelos por cada pasaje</b>.
-        </p>
-        <pre class="bg-black/50 p-4 rounded-lg text-purple-300 text-sm overflow-x-auto"><code>
-public class Pasaje {
-    private String turno;
-    private int cantidad;
-    private final double precioUnitario = 37.5;
+          Una aplicación que incluye un <b>login</b> para validar dos o más usuarios. 
+          Cada usuario tiene un <b>nivel de acceso</b> distinto. 
+          En la segunda ventana se implementa un sistema de <b>conversiones</b> de cuatro medidas (ejemplo: 
+          metros a centímetros, kilómetros a millas, etc.).
+        </p> <pre class="bg-black/50 p-4 rounded-lg text-indigo-300 text-sm overflow-x-auto"><code>
+// Ejemplo básico de login (Modelo Usuario)
+package modelo;
 
-    public Pasaje(String turno, int cantidad) {
-        this.turno = turno;
-        this.cantidad = cantidad;
+public class Usuario {
+    private String username;
+    private String password;
+    private String rol;
+
+    public Usuario(String username, String password, String rol) {
+        this.username = username;
+        this.password = password;
+        this.rol = rol;
     }
 
-    public double calcularImporte() { return precioUnitario * cantidad; }
-    public double calcularDescuento() { return calcularImporte() * (cantidad >= 15 ? 0.08 : 0.05); }
-    public double calcularPago() { return calcularImporte() - calcularDescuento(); }
-    public int calcularCaramelos() { return calcularPago() > 200 ? 2 * cantidad : 0; }
+    public boolean validar(String u, String p) {
+        return username.equals(u) && password.equals(p);
+    }
+
+    public String getRol() { return rol; }
 }
         </code></pre>
-        <p class="text-sm text-gray-300 mt-2"> Se encapsula la lógica en métodos, facilitando la reutilización y el mantenimiento.</p>
+        <p class="text-sm text-gray-300 mt-2">La lógica de validación se implementa en el controlador y las conversiones en la segunda ventana.</p>
       </div>
 
-      <!-- Botones navegación -->
+      <!-- Navegación -->
       <div class="flex justify-between">
-        <a href="semana2.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition">⬅️ Semana 2</a>
-        <a href="index.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition"> Volver a Inicio</a>
+        <a href="semana3.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition">⬅️ Semana 3</a>
+        <a href="index.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition"> Inicio</a>
         <a href="https://github.com/Wikkl20/DDA_Semana3" target="_blank" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition"> Ver en GitHub</a>
-        <a href="semana4.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition">➡️ Semana 4</a>
+        <a href="semana5.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition">➡️ Semana 5...en curso</a>
       </div>
 
     </section>
