--- a/semana1.html
+++ b/semana1.html
@@ -47,7 +47,7 @@
       </div>
       <!-- Título central -->
       <h1 class="text-2xl md:text-3xl font-bold text-purple-200 drop-shadow-[0_0_15px_#a855f7]">
-        📚 Semana 1 - Desarrollo de Aplicaciones
+         Semana 1 - Desarrollo de Aplicaciones
       </h1>
       <!-- Menú -->
       <nav class="flex gap-4 text-sm md:text-base font-semibold">
@@ -64,7 +64,7 @@
 
     <!-- SIDEBAR DE SEMANAS -->
     <aside class="w-56 min-w-[14rem] bg-purple-900/50 backdrop-blur-md rounded-2xl shadow-xl p-4 border border-purple-700 flex flex-col gap-3 sticky top-28 h-[75vh] overflow-y-auto text-sm font-semibold">
-      <h2 class="text-lg font-bold text-purple-300 mb-2 text-center">📌 Semanas</h2>
+      <h2 class="text-lg font-bold text-purple-300 mb-2 text-center"> Semanas</h2>
       <div class="flex flex-col gap-2">
 
         <!-- Generamos todas las semanas -->
@@ -92,9 +92,9 @@
 
       <!-- Introducción -->
       <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
-        <h2 class="text-3xl font-bold text-purple-300 mb-4 text-center">📖 Introducción a la Semana 1</h2>
+        <h2 class="text-3xl font-bold text-purple-300 mb-4 text-center"> Introducción a la Semana 1</h2>
         <p class="typing text-lg leading-relaxed text-center text-purple-200 font-bold">
-          💡 ¡Cada semana que avanzas, estás más cerca de ser un gran programador!
+          ¡Cada semana que avanzas, estás más cerca de ser un gran programador!
         </p>
         <p class="text-lg leading-relaxed text-justify mt-6">
           En esta primera semana nos introducimos al uso de <b>interfaces gráficas en Java</b> utilizando 
@@ -104,29 +104,96 @@
       </div>
 
       <!-- Problema 1 -->
-      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
-        <h2 class="text-2xl font-bold text-purple-300 mb-4">🧩 Problema 1: Descuento General</h2>
-        <p class="text-lg text-justify mb-4">
-          Calcular el importe a pagar por camisetas (S/. 20 cada una), aplicando un 
-          <b>descuento general del 7%</b> sobre el total. El programa valida que la cantidad ingresada sea correcta 
-          (solo números positivos) para evitar errores de entrada.
-        </p>
-        <iframe src="https://www.canva.com/design/DAGy_LQNuHs/Jd4kWQQrmTBbWZ7r_AbDDw/view?embed"
-          class="w-full h-[60vh] lg:h-[78vh] rounded-xl border border-purple-600 shadow-lg"
-          frameborder="0" allowfullscreen loading="lazy"></iframe>
-      </div>
+<div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
+  <h2 class="text-2xl font-bold text-purple-300 mb-4"> Problema 1: Tienda de Camisas con Descuento 7% + 7%</h2>
+  <p class="text-lg text-justify mb-4">
+    Una tienda ha puesto en oferta la venta de <b>camisas</b> con un descuento especial por temporada de verano, denominado <b>7% + 7%</b>.  
+    Los cálculos deben realizarse de la siguiente forma:
+  </p>
+  <ul class="list-disc pl-6 text-gray-200 space-y-2">
+    <li>El importe de la compra es el precio de la camisa multiplicado por la cantidad adquirida.</li>
+    <li>El primer descuento es el <b>7% del importe</b> de la compra.</li>
+    <li>El segundo descuento es el <b>7%</b> de lo que queda después del primer descuento.</li>
+    <li>El descuento total es la suma de ambos descuentos.</li>
+    <li>El importe a pagar es igual al importe inicial menos el descuento total.</li>
+  </ul>
+ 
+<!-- Diagrama Problema 1 -->
+<div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-6 border border-purple-700 mt-6">
+  <h3 class="text-xl font-bold text-purple-300 mb-3">Diagrama de Clases — Problema 1</h3>
+ <pre class="bg-black/50 p-4 rounded-lg text-purple-300 text-sm overflow-x-auto"><code>
+class Camisa {
+  - precio: double
+  - cantidad: int
+  + calcularImporte(): double
+}
 
-      <!-- Problema 2 -->
-      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
-        <h2 class="text-2xl font-bold text-purple-300 mb-4">🧩 Problema 2: Descuento de Verano</h2>
-        <p class="text-lg text-justify mb-4">
-          Además del descuento general, se aplica un <b>descuento de verano del 7%</b> adicional.  
-          El cálculo debe hacerse paso a paso, mostrando: importe inicial → descuento general → descuento de verano → total final.
-        </p>
-        <iframe src="https://www.canva.com/design/DAGy_TLTJps/py5kjKsxFARZ_TBGtihwvQ/view?embed"
-          class="w-full h-[60vh] lg:h-[78vh] rounded-xl border border-purple-600 shadow-lg"
-          frameborder="0" allowfullscreen loading="lazy"></iframe>
-      </div>
+class Descuento {
+  - porcentaje: double
+  + aplicar(): double
+}
+
+Camisa "1" *-- "1" Descuento
+  </pre>
+  <p class="text-sm text-gray-300 mt-2">
+    El diseño muestra cómo una <b>Camisa</b> se relaciona con un <b>Descuento</b>. 
+    La clase <i>Camisa</i> calcula el importe, mientras que <i>Descuento</i> aplica el porcentaje.
+  </p>
+</div>
+
+
+
+      
+<!-- Problema 2 -->
+<div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
+  <h2 class="text-2xl font-bold text-purple-300 mb-4"> Problema 2: Presupuesto de Inversión en Feria</h2>
+  <p class="text-lg text-justify mb-4">
+    Una empresa participará en una feria y debe distribuir un monto total de inversión en distintos rubros.  
+    El programa debe calcular cuánto corresponde a cada rubro según los porcentajes establecidos:
+  </p>
+  <table class="w-full border-collapse border border-purple-700 text-center text-gray-200 my-4">
+    <thead class="bg-purple-800 text-purple-200">
+      <tr>
+        <th class="border border-purple-700 px-4 py-2">Rubro</th>
+        <th class="border border-purple-700 px-4 py-2">Porcentaje</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td class="border border-purple-700 px-4 py-2">Alquiler de espacio en la feria</td><td class="border border-purple-700 px-4 py-2">23%</td></tr>
+      <tr><td class="border border-purple-700 px-4 py-2">Publicidad</td><td class="border border-purple-700 px-4 py-2">7%</td></tr>
+      <tr><td class="border border-purple-700 px-4 py-2">Transporte</td><td class="border border-purple-700 px-4 py-2">26%</td></tr>
+      <tr><td class="border border-purple-700 px-4 py-2">Servicios feriales</td><td class="border border-purple-700 px-4 py-2">12%</td></tr>
+      <tr><td class="border border-purple-700 px-4 py-2">Decoración</td><td class="border border-purple-700 px-4 py-2">21%</td></tr>
+      <tr><td class="border border-purple-700 px-4 py-2">Gastos varios</td><td class="border border-purple-700 px-4 py-2">11%</td></tr>
+    </tbody>
+  </table>
+  <p class="text-gray-300 text-sm"> El programa recibe el monto total de inversión y devuelve cuánto dinero corresponde a cada rubro.</p>
+  
+  <!-- Diagrama Problema 2 -->
+<div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-6 border border-purple-700 mt-6">
+  <h3 class="text-xl font-bold text-purple-300 mb-3">Diagrama de Clases — Problema 2</h3>
+   <pre class="bg-black/50 p-4 rounded-lg text-purple-300 text-sm overflow-x-auto"><code>
+
+class Presupuesto {
+  - montoTotal: double
+  + distribuir(): void
+}
+
+class Rubro {
+  - nombre: String
+  - porcentaje: double
+  + calcularMonto(): double
+}
+
+Presupuesto "1" *-- "many" Rubro
+  </pre>
+  <p class="text-sm text-gray-300 mt-2">
+    Aquí la clase <b>Presupuesto</b> administra el monto total y lo distribuye en varios <b>Rubros</b> 
+    (espacio, publicidad, transporte, etc.), cada uno con su porcentaje definido.
+  </p>
+</div>
+
+</div>
 
       <!-- Navegación -->
       <div class="flex justify-between fade-in">
