--- a/semana2.html
+++ b/semana2.html
@@ -47,7 +47,7 @@
       </div>
       <!-- Título central -->
       <h1 class="text-2xl md:text-3xl font-bold text-purple-200 drop-shadow-[0_0_15px_#a855f7]">
-        📚 Semana 2 - Desarrollo de Aplicaciones
+         Semana 2 - Desarrollo de Aplicaciones
       </h1>
       <!-- Menú -->
       <nav class="flex gap-4 text-sm md:text-base font-semibold">
@@ -64,7 +64,7 @@
 
     <!-- SIDEBAR DE SEMANAS -->
     <aside class="w-56 min-w-[14rem] bg-purple-900/50 backdrop-blur-md rounded-2xl shadow-xl p-4 border border-purple-700 flex flex-col gap-3 sticky top-28 h-[75vh] overflow-y-auto text-sm font-semibold">
-      <h2 class="text-lg font-bold text-purple-300 mb-2 text-center">📌 Semanas</h2>
+      <h2 class="text-lg font-bold text-purple-300 mb-2 text-center"> Semanas</h2>
       <div class="flex flex-col gap-2">
         <a href="semana1.html"  class="px-3 py-2 bg-purple-700 hover:bg-purple-400 hover:text-black rounded-lg">Semana 1</a>
         <a href="semana2.html"  class="px-3 py-2 bg-purple-400 text-black font-bold rounded-lg shadow-md">Semana 2</a>
@@ -90,9 +90,9 @@
 
       <!-- Introducción -->
       <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
-        <h2 class="text-3xl font-bold text-purple-300 mb-4 text-center">📖 Introducción a la Semana 2</h2>
+        <h2 class="text-3xl font-bold text-purple-300 mb-4 text-center"> Introducción a la Semana 2</h2>
         <p class="typing text-lg leading-relaxed text-center text-purple-200 font-bold">
-          💡 Domina condicionales en Java y crea apps más inteligentes.
+           Domina condicionales en Java y crea apps más inteligentes.
         </p>
         <p class="text-lg leading-relaxed text-justify mt-6">
           En esta segunda semana se trabajaron problemas aplicando <b>estructuras condicionales</b> 
@@ -105,21 +105,43 @@
 
       <!-- Problema 1 -->
       <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
-        <h2 class="text-2xl font-bold text-purple-300 mb-4">🧩 Actividad 01: Tienda de Docenas</h2>
+        <h2 class="text-2xl font-bold text-purple-300 mb-4"> Actividad 01: Tienda de Docenas</h2>
         <p class="text-lg text-justify mb-4">
           Se calcula el importe de la compra aplicando descuentos según las docenas adquiridas:  
           <b>20% si son 10 o más</b>, o <b>10%</b> si son menos.  
           Además, si el importe ≥ S/.200, se otorgan <b>2 lapiceros por cada docena</b>.  
           El sistema valida entradas correctas y muestra importe total, descuento, pago final y obsequios.
         </p>
-        <iframe src="https://www.canva.com/design/DAGy_LQNuHs/Jd4kWQQrmTBbWZ7r_AbDDw/view?embed"
-          class="w-full h-[60vh] lg:h-[78vh] rounded-xl border border-purple-600 shadow-lg"
-          frameborder="0" allowfullscreen loading="lazy"></iframe>
+        <!-- Diagrama Problema 1 -->
+<div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-6 border border-purple-700 mt-6">
+  <h3 class="text-xl font-bold text-purple-300 mb-3">Diagrama de Clases — Problema 1</h3>
+  <pre class="bg-black/50 p-4 rounded-lg text-purple-300 text-sm overflow-x-auto"><code>
+class Producto {
+  - precioDocena: double
+  - cantidad: int
+  + calcularImporte(): double
+  + calcularDescuento(): double
+  + calcularPago(): double
+  + calcularLapiceros(): int
+}
+
+class Tienda {
+  + vender(p: Producto)
+}
+  </code></pre>
+  <p class="text-sm text-gray-300 mt-2">
+    El diseño encapsula los cálculos en la clase <i>Producto</i>, incluyendo importe,
+    descuentos y obsequios. La clase <i>Tienda</i> representa el proceso de venta,
+    utilizando los datos del producto.
+  </p>
+</div>
       </div>
+
+
 
       <!-- Problema 2 -->
       <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700 fade-in">
-        <h2 class="text-2xl font-bold text-purple-300 mb-4">🧩 Actividad 02: Sueldo de Empleado</h2>
+        <h2 class="text-2xl font-bold text-purple-300 mb-4"> Actividad 02: Sueldo de Empleado</h2>
         <p class="text-lg text-justify mb-4">
           Se calcula el sueldo de un empleado considerando:  
           <b>Sueldo básico</b> (horas × tarifa según categoría),  
@@ -127,10 +149,34 @@
           y <b>descuento por ley</b> (13.5% si ≥ 3500, caso contrario 10%).  
           El programa presenta sueldo básico, bruto, descuento y sueldo neto.
         </p>
-        <iframe src="https://www.canva.com/design/DAGy_TLTJps/py5kjKsxFARZ_TBGtihwvQ/view?embed"
-          class="w-full h-[60vh] lg:h-[78vh] rounded-xl border border-purple-600 shadow-lg"
-          frameborder="0" allowfullscreen loading="lazy"></iframe>
+              <!-- Diagrama Problema 2 -->
+<div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-6 border border-purple-700 mt-6">
+  <h3 class="text-xl font-bold text-purple-300 mb-3">Diagrama de Clases — Problema 2</h3>
+  <pre class="bg-black/50 p-4 rounded-lg text-purple-300 text-sm overflow-x-auto"><code>
+class Empleado {
+  - categoria: char
+  - horasTrabajadas: int
+  - numHijos: int
+  + calcularSueldoBasico(): double
+  + calcularBonificacion(): double
+  + calcularSueldoBruto(): double
+  + calcularDescuento(): double
+  + calcularSueldoNeto(): double
+}
+
+class Empresa {
+  + procesarEmpleado(e: Empleado)
+}
+  </code></pre>
+  <p class="text-sm text-gray-300 mt-2">
+    La clase <i>Empleado</i> gestiona todos los cálculos salariales: sueldo básico,
+    bonificación, descuento y sueldo neto. La clase <i>Empresa</i> puede administrar
+    múltiples empleados para procesar sus pagos.
+  </p>
+</div>
       </div>
+
+
 
       <!-- Navegación -->
       <div class="flex justify-between fade-in">
@@ -138,11 +184,11 @@
           ⬅️ Semana 1
         </a>
         <a href="index.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105">
-          🏠 Inicio
+           Inicio
         </a>
         <a href="https://github.com/Wikkl20/DDA_Semana2" target="_blank"
           class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105">
-          🌐 Ver en GitHub
+           Ver en GitHub
         </a>
         <a href="semana3.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105">
           ➡️ Semana 3
